--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
+    <script language='javascript' async='true' type='text/javascript' src='https://cdn.whatfix.com/prod/b145de23-22bc-431a-8adb-75df12409ca0/initiator/initiator.nocache.js'></script>
     <title>My website</title>
     <style>
         *{
